--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/drawer": "^5.8.5",
     "@react-navigation/native": "^5.7.0",
     "@react-navigation/stack": "^5.7.0",
     "expo": "~38.0.8",
@@ -21,7 +22,11 @@
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "expo-camera": "~8.3.1",
+    "expo-image-picker": "~8.3.0",
+    "expo-constants": "~9.1.1",
+    "expo-permissions": "~9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
