--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "expo-camera": "~8.3.1",
     "expo-image-picker": "~8.3.0",
     "expo-constants": "~9.1.1",
-    "expo-permissions": "~9.0.1"
+    "expo-permissions": "~9.0.1",
+    "@react-native-community/async-storage": "~1.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
