--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "expo-image-picker": "~8.3.0",
     "expo-constants": "~9.1.1",
     "expo-permissions": "~9.0.1",
-    "@react-native-community/async-storage": "~1.11.0"
+    "@react-native-community/async-storage": "~1.11.0",
+    "expo-image-manipulator": "~8.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
